[feat] package.json npm start

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Kata-birthday from epfl-dojo by Azecko",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm i; node index.js"
   },
   "author": "Azecko",
   "license": "ISC",
