[fix] environment variables

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
-MAIL_FROM="example" <example@example.com>
+MAIL_FROM="example <example@example.com>"
 SMTP_HOST=mail.smtpserver.com
 PORT=465
 AUTH_USER=youruser
